--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "history": "^4.7.2",
     "js-beautify": "^1.6.14",
     "jsonp": "^0.2.1",
+    "jstoxml": "^1.1.3",
     "less-vars-to-js": "^1.1.2",
     "lodash": "^4.17.4",
     "mockjs": "^1.0.1-beta3",
@@ -53,7 +54,9 @@
     "redbox-react": "^1.2.10",
     "roadhog": "^1.2.2"
   },
-  "pre-commit": ["lint"],
+  "pre-commit": [
+    "lint"
+  ],
   "scripts": {
     "dev": "cross-env BROWSER=none  roadhog server",
     "lint": "eslint --fix --ext .js src",
