--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "rc-tween-one": "^1.3.1",
     "react": "^15.6.1",
     "react-countup": "^2.1.1",
+    "react-dnd": "^2.5.4",
+    "react-dnd-html5-backend": "^2.5.4",
     "react-dom": "^15.6.1",
     "react-draft-wysiwyg": "^1.10.0",
     "react-helmet": "^5.1.3",
