--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-draft-wysiwyg": "^1.10.0",
     "react-helmet": "^5.1.3",
     "react-sortable-tree": "^1.5.0",
+    "react-sortable-tree-theme-file-explorer": "^1.1.1",
     "recharts": "^0.22.4"
   },
   "devDependencies": {
